# cpp_prolog_call_chess

./: .gitignore  CMakeLists.txt  NOTES.md
src/: create_db.cpp
src/chess/: bitboard.cpp  bitboard.h  bitboard_extra.h  bitset.cpp  bitset.h  file_io.cpp  file_io.h  gen_geometry.cpp  gen_geometry.h  main.cpp  moves.cpp  moves.h  position.cpp  position.h  types.h  uci_loop.h
src/prolog/: test_cpp.cpp  test_cpp.pl
